publish: Update sprockets, cut version 2.3.1
generated from commit de496848c1e7b7116371ae25944aced1c22c47a9

--- a/index.html
+++ b/index.html
@@ -238,10 +238,10 @@
                     <a href="#get-breaches-by-domain" class="toc-h2 toc-link" data-title="Get breaches by domain">Get breaches by domain</a>
                   </li>
                   <li>
-                    <a href="#apiv1emailpost" class="toc-h2 toc-link" data-title="ApiV1EmailPost">ApiV1EmailPost</a>
+                    <a href="#add-email" class="toc-h2 toc-link" data-title="Add email">Add email</a>
                   </li>
                   <li>
-                    <a href="#apiv1domainpost" class="toc-h2 toc-link" data-title="ApiV1DomainPost">ApiV1DomainPost</a>
+                    <a href="#add-domain" class="toc-h2 toc-link" data-title="Add domain">Add domain</a>
                   </li>
               </ul>
           </li>
@@ -747,7 +747,7 @@ curl -X GET http://portal.breachreport.com/api/v1/domain/<span class="o">{</span
 <aside class="success">
 This operation does not require authentication
 </aside>
-<h2 id='apiv1emailpost'>ApiV1EmailPost</h2>
+<h2 id='add-email'>Add email</h2>
 <p><a id="opIdApiV1EmailPost"></a></p>
 
 <blockquote>
@@ -875,7 +875,7 @@ curl -X POST http://portal.breachreport.com/api/v1/email <span class="se">\</spa
 </span></code></pre>
 <p><code>POST /api/v1/email</code></p>
 
-<p><em>ApiV1Email_POST</em></p>
+<p><em>Add email</em></p>
 
 <p>Endpoint to add email</p>
 
@@ -973,7 +973,7 @@ curl -X POST http://portal.breachreport.com/api/v1/email <span class="se">\</spa
 <aside class="success">
 This operation does not require authentication
 </aside>
-<h2 id='apiv1domainpost'>ApiV1DomainPost</h2>
+<h2 id='add-domain'>Add domain</h2>
 <p><a id="opIdApiV1DomainPost"></a></p>
 
 <blockquote>
@@ -1101,7 +1101,7 @@ curl -X POST http://portal.breachreport.com/api/v1/domain <span class="se">\</sp
 </span></code></pre>
 <p><code>POST /api/v1/domain</code></p>
 
-<p><em>ApiV1Domain_POST</em></p>
+<p><em>Add domain</em></p>
 
 <p>Endpoint to add domain</p>
 
